v22.01/en/_sources/webgui.rst.txt
Web GUI

The

rc_cube

's Web GUI can be used to test, calibrate, and configure the device.

Accessing the Web GUI

The Web GUI can be accessed from any web browser, such as Firefox,
Google Chrome, or Microsoft Edge, via the

rc_cube

's IP address. The easiest way to access the Web GUI is to simply
double click on the desired device using the "rcdiscover-gui" tool as
explained in

Discovery of rc_cube devices

.

Alternatively, some network environments automatically configure the
unique host name of the

rc_cube

 in their Domain Name Server (

DNS

). In this case, the Web GUI can also be accessed directly using the

URL

 "http://<host-name>" by replacing "<host-name>" with the device's
host name.

For Linux and Mac operating systems, this even works without DNS via
the multicast Domain Name System (

mDNS

), which is automatically used if ".local" is appended to the host
name. Thus, the URL simply becomes "http://<host-name>.local".

Access to the rc_visard Web GUI

For troubleshooting, users can also directly access the Web GUI of the

rc_visard

 device that is connected to the

rc_cube

. It is available for the

rc_visard

 on camera pipeline 0 at port "2342" of the

rc_cube

, and hence at the

URL

 "http://<host>:2342" where "<host>" is the IP address or host name of
the

rc_cube

 that the

rc_visard

 is connected to. For camera pipelines 1, 2 or 3 it can be accessed at
"http://<host>:2343", "http://<host>:2344", and "http://<host>:2345",
respectively.

By this means, users have access to the

rc_visard

's device information or log files.

Note: If a computer screen is directly connected to the

  rc_cube

  , it shows the Web GUI with a small additional menu from which the

  rc_visard

  's Web GUI can be accessed as well.

Exploring the Web GUI

The Web GUI's dashboard page gives the most important information
about the device and the running camera pipelines.


The page's side menu permits access to the individual pages of the

rc_cube

's Web GUI:

Pipeline

   gives access to the respective camera pipeline and its camera,
   detection and configuration modules. Each camera pipeline provides
   an overview page with the most important information about the
   camera connection and the software modules running in the pipeline.


Each pipeline provides a sub-menu with the individual pages for the
modules running in the pipeline:

Camera

   shows a live stream of the rectified camera images. The frame rate
   can be reduced to save bandwidth when streaming to a GigE Vision®
   client. Furthermore, exposure can be set manually or automatically.
   See

   Parameters

    for more information.

Depth Image

   shows a live stream of the left rectified, disparity, and
   confidence images. The page contains various settings for depth-
   image computation and filtering. See

   Parameters

    for more information.

Modules

   gives access to the detection modules of the

   rc_cube

    (see

   Detection modules

   ).

Configuration

   gives access to the configuration modules of the

   rc_cube

    (see

   Configuration modules

   ).

The following modules running outside the pipelines can be accessed in
the side menu:

Database

   gives access to the database modules of the

   rc_cube

    (see

   Database modules

   ).

System

   gives access to general settings, device information and to the log
   files, and permits the firmware or the license file to be updated.

UserSpace

   gives access to the

   rc_cube

   's UserSpace (see

   UserSpace

   ).

Note: Further information on all parameters in the Web GUI can be
  obtained by pressing the

  Info

   button next to each parameter.

Downloading camera images

The Web GUI provides an easy way to download a snapshot of the current
scene as a .tar.gz file by clicking on the camera icon below the image
live streams on the

Camera

 page. This snapshot contains:

the rectified camera images in full resolution as .png files,

a camera parameter file containing the camera matrix, image
dimensions, exposure time, gain value and the stereo baseline,

the current IMU readings as imu.csv file, if available,

a pipeline_status.json file containing information about all modules
running inside the pipelines on the rc_cube,

a backup.json file containing the settings of the rc_cube including
grippers, load carriers and regions of interest,

a system_info.json file containing system information about the
rc_cube.

The filenames contain the timestamps.

Downloading depth images and point clouds

The Web GUI provides an easy way to download the depth data of the
current scene as a .tar.gz file by clicking on the camera icon below
the image live streams on the

Depth Image

 page. This snapshot contains:

the rectified left and right camera images in full resolution as .png
files,

an image parameter file corresponding to the left image containing the
camera matrix, image dimensions, exposure time, gain value and the
stereo baseline,

the disparity, error and confidence images in the resolution
corresponding to the currently chosen quality as .png files,

a disparity parameter file corresponding to the disparity image
containing the camera matrix, image dimensions, exposure time, gain
value and the stereo baseline, and information about the disparity
values (i.e. invalid values, scale, offset),

a point cloud in the current depth quality (resolution) as .ply file,

the current IMU readings as imu.csv file, if available,

a pipeline_status.json file containing information about all modules
running inside the pipelines on the rc_cube,

a backup.json file containing the settings of the rc_cube including
grippers, load carriers and regions of interest,

a system_info.json file containing system information about the
rc_cube.

The filenames contain the timestamps.

Note: Downloading a depth snapshot will trigger an acquisition in
  the same way as clicking on the "Acquire" button on the

  Depth Image

   page of the Web GUI, and, thus, might affect running applications.
